--- a/angular.json
+++ b/angular.json
@@ -122,6 +122,10 @@
               "devServerTarget": "nlm-ncbi-abstract-viewer:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
